--- a/src/layout/DefaultLayout/index.module.scss
+++ b/src/layout/DefaultLayout/index.module.scss
@@ -1,10 +1,6 @@
-.header {
-  height: 80px;
-  background-color: #000;
-}
-
 .contentWrapper {
-  height: calc(100vh - 80px * 2);
+  margin-top: 50px;
+  min-height: calc(200vh - 80px - 50px);
 }
 
 .footer {
